<resources>
    <string name="app_name">RooMusic</string>


    <!-- Strings para los SLIDER ADAPTER -->
    <string name="sliderShare">Comparte</string>
    <string name="sliderShareText">El mejor método de compartir musica con tus amigos de la manera mas fácil, practica y rápida.</string>
    <string name="slideListen">Esucha</string>
    <string name="slideListenText">Disfruta de tus artistas favoritos directamente desde la aplicación de la manera mas cómoda.</string>
    <string name="sliderFindOut">Descubre</string>
    <string name="slideFindOutText">Descubre nuevos artistas y canciones de mano de tus amigos. Te gusta la canción? pídele que te la envíen!</string>
    <string name="slideNextBtn">Siguiente</string>
    <string name="slideBackBtn">Atrás</string>
    <string name="slideStartBtn">Empezar</string>

    <!-- String para LOGIN ACTIVITY-->
    <string name="LoginName">Login</string>
    <string name="LoginUserEmail">Nombre de usuario o correo.</string>
    <string name="LoginPass">Contraseña</string>
    <string name="LoginBtn">Login</string>
    <string name="LoginSignUpBtn">Registrarse</string>
    <string name="LoginSuccess">Sesión iniciada!</string>
    <string name="LoginFail">No estas registrado! Registrate!</string>

    <!-- String FRAGMENT ADD PUBLICATION-->

    <string name="AddPubliSoloUna">Solo puedes seleccionar una cancion: </string>
    <string name="AddPubliCancionAñadida">Cancion añadida</string>


    <!-- String para el REGISTRO-->
    <string name="SignName">Registro</string>
    <string name="SignUsername">Nombre de usuario</string>
    <string name="SignUseremail">Correo</string>
    <string name="SignPass">Contraseña</string>
    <string name="SignRepPass">Repetir Contraseña</string>
    <string name="SignBtn">Registrarse</string>
    <string name="SignEmptyField">Hay campos vacios.</string>
    <string name="SignPasswordNoMatch">Las contraseñas no coinciden!</string>
    <string name="SignUserRegistered">Usuario registrado.</string>
    <string name="SignFail">Error</string>
    <string name="SignUserAlreadyRegistered">El usuario ya esta registrado</string>
    <string name="SignUsernameExists">Nombre de usuario ya existe.</string>

    <!-- String FRAGMENT HOME-->
    <string name="cancionDia">Tu canción del día</string>

    <!-- String PERMISOS-->
    <string name="MainPermisoSi">Permiso concedido</string>
    <string name="MainPermisoNo">Permiso denegado</string>


    <!-- String FRAGMENT USER CHAT-->
    <string name="ChatUsuarioConectado">Usuario Conectado</string>
    <string name="ChatErrorSendBird">Código de error</string>
    <string name="ChatSenBirdConect">Has iniciado sesion en SendBird</string>

    <!-- String FRAGMENT ADD FRIEND-->
    <string name="hintUsername">Nombre de usuario</string>
    <string name="addedFriend">Amigo añadido</string>


    <!-- String FRAGMENT_SOCIAL-->
    <string name="SocialAmigos">Amigos</string>
    <string name="SocialMuro">Muro</string>

    <!-- String FRAGMENT PROFILE-->
    <string name="ProfileLogOut">Sesión cerrada.</string>

    <!-- String FRAGMENT MUSIC-->
    <string name="MusicSong">Cancion</string>
    <string name="MusicArtist">Artista</string>
    <string name="MusicGenre">Genero</string>

    <!-- String UPLOAD ACTIVITY-->
    <string name="UploadTitle">Subir foto</string>
    <string name="UploadBtnUpPhoto">Subir</string>
    <string name="UploadBtnSelectPhoto">Seleccionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_Music">Music</string>
    <string name="nav_Share">Share</string>
    <string name="nav_Perfil">Profile</string>
    <string name="nav_Setings">Settings</string>
    <string name="UploadPhotoSucces">Foto subida!</string>
    <string name="ChatSendMessage">Enviar</string>
    <string name="ChatHint">Escriba un mensaje...</string>
    <string name="sendbirdKey">60DA930F-248F-479A-B406-028DEF5060D7</string>
    <string name="email_change_password">Correo Electrónico</string>
    <string name="password_change_password">Contraseña</string>
    <string name="new_password1">Nueva contraseña</string>
    <string name="new_password2">Repita la contraseña</string>
    <string name="btnCheckText">Continuar</string>
    <string name="pass_empty">Contraseña vacía!</string>
    <string name="wrong_pass">Contraseña incorrecta!</string>
    <string name="ChangeBtnPass">Confirmar</string>
    <string name="pass_no_match">No coinciden!</string>
    <string name="pass_size">Debe contener al menos 6 caracteres!</string>
    <string name="LoginPassFail">Contraseña incorrecta!</string>
    <string name="ChangePassTitle">Change Password</string>
    <string name="SignMalformedEmail">Proporcione una dirección de correo correcta, porfavor.</string>
    <string name="AddFriendToolbarText">Buscar amigos</string>
    <string name="AddPubliTitle">Añadir publicación</string>
    <string name="FormArtistAddArtist">Añadir artista</string>
    <string name="FormGenreTitle">Añadir genero</string>
    <string name="ArtistTitle">Artista</string>
    <string name="AddTitle">Add Song</string>
    <string name="GenreTitle">Genero</string>
    <string name="ChatTitle">Chat</string>
    <string name="PlayerTitle">Reproducción</string>
    <string name="WeakPass">Contraseña débil</string>
    <string name="AddedFriendText">Amigo añadido</string>
    <string name="FireStorageURL">gs://musicproject-dc678.appspot.com</string>
    <string name="LoginLoading">Iniciando sesión</string>
    <string name="AdapaterPubliGetSong">Obteniendo canción.</string>
    <string name="AddPubliLoadSong">Publicando...</string>
    <string name="SigningUser">Registrandote...</string>
</resources>
