<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/round_queue_music_black_24dp"
        android:title="@string/nav_Music" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_Perfil" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/round_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/round_share_black_24dp"
        android:title="@string/nav_Share" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_Setings" />
</menu>
