<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.RequestCredentials">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_below="@id/toolbar_credentials">


        <EditText
            android:id="@+id/user_correo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/email_change_password"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/user_old_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/user_correo"
            android:hint="@string/password_change_password"
            android:layout_marginTop="25dp"
            android:textSize="15dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_check_credentials"
            android:text="@string/btnCheckText"
            android:textSize="15dp"
            android:background="@drawable/oval5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true" />



    </RelativeLayout>

</RelativeLayout>