<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ChangePassword"
    android:id="@+id/relative_change_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_password"
            android:layout_alignParentBottom="true">


            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:hint="@string/new_password1"
                android:textSize="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/password1"
                android:layout_marginTop="25dp"
                android:hint="@string/new_password2"
                android:textSize="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/confirm_change_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/verdepassword"
                android:text="@string/ChangeBtnPass"
                android:textSize="15dp" />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>